tests/NormalTests/paczka1/small_fuzzy/64970871.err
Error in line 4: S378 A930 93,8
Error in line 6: S378 S547 40,5
Error in line 10: OfYZkk S799 50,8
